--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .product-grid:hover .social{opacity:1;top:50%}
 .product-grid .social li{display:inline-block}
 .product-grid .social li a{color:#fff;background-color:#333;font-size:16px;line-height:40px;text-align:center;height:40px;width:40px;margin:0 2px;display:block;position:relative;transition:all .3s ease-in-out}
-.product-grid .social li a:hover{color:#fff;background-color:#ef5777}
+.product-grid .social li a:hover{color:#fff;background-color:#ef5777;cursor: pointer;}
 .product-grid .social li a:after,.product-grid .social li a:before{content:attr(data-tip);color:#fff;background-color:#000;font-size:12px;letter-spacing:1px;line-height:20px;padding:1px 5px;white-space:nowrap;opacity:0;transform:translateX(-50%);position:absolute;left:50%;top:-30px}
 .product-grid .social li a:after{content:'';height:15px;width:15px;border-radius:0;transform:translateX(-50%) rotate(45deg);top:-20px;z-index:-1}
 .product-grid .social li a:hover:after,.product-grid .social li a:hover:before{opacity:1}
@@ -30,6 +30,6 @@
 .product-grid .title a:hover,.product-grid:hover .title a{color:#ef5777}
 .product-grid .price{color:#333;font-size:17px;font-family:Montserrat,sans-serif;font-weight:700;letter-spacing:.6px;margin-bottom:8px;text-align:center;transition:all .3s}
 .product-grid .price span{color:#999;font-size:13px;font-weight:400;text-decoration:line-through;margin-left:3px;display:inline-block}
-.product-grid .add-to-cart{color:#000;font-size:13px;font-weight:600}
+.product-grid .add-to-cart{color:#000;font-size:13px;font-weight:600;cursor: pointer;}
 @media only screen and (max-width:990px){.product-grid{margin-bottom:30px}
 }
