filter items added

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .right {
   float: right
 }
+.padbtn {
+  margin: 10px;
+}
 
 /********************* shopping Demo-1 **********************/
 .product-grid{font-family:Raleway,sans-serif;text-align:center;padding:0 0 72px;border:1px solid rgba(0,0,0,.1);overflow:hidden;position:relative;z-index:1}
